--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI="mongodb://localhost:27017/mern-blog"
+MONGO_URI="mongodb+srv://devtestuser:devtestuser@cluster0-vpvmp.mongodb.net/mern-blog?retryWrites=true&w=majority"
 SECRET="imagine"
